HSC-252: Add assembly.xml and some small adjustments

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>ozone</artifactId>
+      <type>zip</type>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>ozone-scripts</artifactId>
+      <type>zip</type>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    
     <!-- TODO: Add any implementation-specific dependencies -->
   </dependencies>
 
