--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
-  - name: Run Ozone Ozone Haiti
+  - name: Run Ozone Haiti
     before: sudo apt-get update && sudo apt-get install -y gettext-base && sudo rm -rf /var/lib/apt/lists/*
     init: ./scripts/mvnw clean package
     command: source target/go-to-scripts-dir.sh && ./start.sh
