--- a/.github/workflows/check-deps.yml
+++ b/.github/workflows/check-deps.yml
@@ -3,7 +3,7 @@ name: Check for dependency changes
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 */12 * * *'
+    - cron: '0 * * * *'
 
 jobs:
   check-deps:
