--- a/.gitignore
+++ b/.gitignore
@@ -224,6 +224,8 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
+effective-pom.xml
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
