--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <maven.compiler.target>8</maven.compiler.target>
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
+    <openmrsERPVersion>2.1.0-SNAPSHOT</openmrsERPVersion>
   </properties>
 
   <dependencies>
@@ -34,7 +35,11 @@
       <type>zip</type>
       <version>1.0.0-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>erp-omod</artifactId>
+      <version>${openmrsERPVersion}</version>
+    </dependency>
     <!-- TODO: Add any implementation-specific dependencies -->
   </dependencies>
 
