HSC-313: Added Odoo initializer configurations.

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,8 @@
                     <exclude>distro/configs/**/ocl/openmrs_BasicLabTests*</exclude>
                     <exclude>distro/configs/**/ocl/openmrs_DeathCause*</exclude>
                     <exclude>distro/configs/**/queues/*</exclude>
+                    <!-- Exlude Ozone's Odoo Initializer configs -->
+                    <exclude>distro/configs/odoo/initializer_config/**</exclude>
                   </excludes>
                 </resource>
               </resources>
