--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>erp-omod</artifactId>
       <version>${openmrsERPVersion}</version>
     </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>orderexpansion-omod</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </dependency>
     <!-- TODO: Add any implementation-specific dependencies -->
   </dependencies>
 
