--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
     <openmrsERPVersion>2.1.0-SNAPSHOT</openmrsERPVersion>
+    <orderExpansionVersion>1.0.0-SNAPSHOT</orderExpansionVersion>
   </properties>
 
   <dependencies>
@@ -39,6 +40,11 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>erp-omod</artifactId>
       <version>${openmrsERPVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>orderexpansion-omod</artifactId>
+        <version>${orderExpansionVersion}</version>
     </dependency>
     <!-- TODO: Add any implementation-specific dependencies -->
   </dependencies>
