Add Medical supply orders app to Ozone Haiti

--- a/configs/openmrs/frontend_assembly/spa-assemble-config.json
+++ b/configs/openmrs/frontend_assembly/spa-assemble-config.json
@@ -1,6 +1,7 @@
 {
   "frontendModules": {
-    "@mekomsolutions/esm-patient-billing-status-app": "next"
+    "@mekomsolutions/esm-patient-billing-status-app": "next",
+    "@mekomsolutions/esm-patient-medical-supply-orders-app": "next"
   },
   "__comment": "Haiti Overrides",
   "frontendModuleExcludes": []
