--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>com.ozonehis</groupId>
   <artifactId>ozone-haiti</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
@@ -21,21 +20,13 @@
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
     <openmrsERPVersion>2.1.0-SNAPSHOT</openmrsERPVersion>
     <orderExpansionVersion>1.0.0-SNAPSHOT</orderExpansionVersion>
+
+    <ozone.artifactId>ozone-pro</ozone.artifactId>
+    <ozone.groupId>com.ozonehis</ozone.groupId>
+    <ozone.version>1.0.0-SNAPSHOT</ozone.version>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>com.ozonehis</groupId>
-      <artifactId>ozone</artifactId>
-      <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.ozonehis</groupId>
-      <artifactId>ozone-scripts</artifactId>
-      <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>erp-omod</artifactId>
@@ -46,7 +37,6 @@
       <artifactId>orderexpansion-omod</artifactId>
         <version>${orderExpansionVersion}</version>
     </dependency>
-    <!-- TODO: Add any implementation-specific dependencies -->
   </dependencies>
 
   <build>
@@ -68,7 +58,7 @@
               <overwrite>true</overwrite>
               <resources>
                 <resource>
-                  <directory>${project.build.directory}/ozone</directory>
+                  <directory>${project.build.directory}/${ozone.artifactId}</directory>
                   <excludes>
                     <exclude>distro/configs/**/address*/*demo.*</exclude>
                     <exclude>distro/configs/**/concepts/*demo.csv</exclude>
