--- a/configs/openmrs/frontend_assembly/spa-assemble-config.json
+++ b/configs/openmrs/frontend_assembly/spa-assemble-config.json
@@ -2,7 +2,8 @@
   "frontendModules": {
     "@mekomsolutions/esm-patient-billing-status-app": "next",
     "@mekomsolutions/esm-patient-medical-supply-orders-app": "next",
-    "@openmrs/esm-ward-app": "next"
+    "@openmrs/esm-ward-app": "next",
+    "@openmrs/esm-bed-management-app": "next"
   },
   "__comment": "Haiti Overrides",
   "frontendModuleExcludes": []
