--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
     <openmrsERPVersion>2.1.0-SNAPSHOT</openmrsERPVersion>
     <orderExpansionVersion>1.0.0-SNAPSHOT</orderExpansionVersion>
+    <emrapi.version>2.1.0</emrapi.version>
+    <event.version>2.10.0</event.version>
+    <bedmanagement.version>6.0.0</bedmanagement.version>
   </properties>
 
   <dependencies>
@@ -45,6 +48,24 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>orderexpansion-omod</artifactId>
         <version>${orderExpansionVersion}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>emrapi-omod</artifactId>
+      <version>${emrapi.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs</groupId>
+      <artifactId>event-omod</artifactId>
+      <version>${event.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
+      <artifactId>bedmanagement-omod</artifactId>
+      <version>${bedmanagement.version}</version>
+      <scope>provided</scope>
     </dependency>
     <!-- TODO: Add any implementation-specific dependencies -->
   </dependencies>
