Use Order Expansion module 1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
     <openmrsERPVersion>2.1.0-SNAPSHOT</openmrsERPVersion>
-    <orderExpansionVersion>1.0.0-SNAPSHOT</orderExpansionVersion>
+    <orderExpansionVersion>1.0.0</orderExpansionVersion>
     <emrapi.version>2.1.0</emrapi.version>
     <event.version>2.10.0</event.version>
     <bedmanagement.version>6.0.0</bedmanagement.version>
