--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
                     <exclude>distro/configs/**/encountertypes_core-demo.csv</exclude>
                     <exclude>distro/configs/**/misc-core_data.csv/</exclude>
                     <exclude>distro/configs/**/ocl/openmrs_BasicLabTests*</exclude>
+                    <exclude>distro/configs/**/ocl/openmrs_CIELImmunizationContent*</exclude>
                     <exclude>distro/configs/**/ocl/openmrs_DeathCause*</exclude>
                     <exclude>distro/configs/**/queues/*</exclude>
                     <exclude>distro/configs/**/relationshiptypes-core_demo.csv</exclude>
