HSC-438: Exclude Attachements, Laboratory and Services queues

--- a/configs/openmrs/frontend_assembly/spa-assemble-config.json
+++ b/configs/openmrs/frontend_assembly/spa-assemble-config.json
@@ -14,5 +14,10 @@
     "@openmrs/esm-patient-allergies-app": "9.2.1"
   },
   "__comment": "Haiti Overrides",
-  "frontendModuleExcludes": []
+  "frontendModuleExcludes": [
+    "@openmrs/esm-service-queues-app",
+    "@openmrs/esm-appointments-app",
+    "@openmrs/esm-laboratory-app",
+    "@openmrs/esm-patient-programs-app"
+  ]
 }
