--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>com.ozonehis</groupId>
     <artifactId>maven-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-alpha.13</version>
   </parent>
 
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-haiti</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,7 +19,7 @@
     <maven.compiler.target>8</maven.compiler.target>
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
-    <openmrsERPVersion>2.1.0-SNAPSHOT</openmrsERPVersion>
+    <openmrsERPVersion>2.1.0</openmrsERPVersion>
     <orderExpansionVersion>1.0.0</orderExpansionVersion>
     <emrapi.version>2.1.0</emrapi.version>
     <event.version>2.10.0</event.version>
@@ -31,13 +31,13 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha.13</version>
     </dependency>
     <dependency>
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone-scripts</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha.13</version>
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
