--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,13 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha.13</version>
     </dependency>
     <dependency>
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone-scripts</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0-alpha.13</version>
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
