--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+    <ozone.version>1.0.0-alpha.13</ozone.version>
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
 
@@ -33,13 +34,13 @@
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${ozone.version}</version>
     </dependency>
     <dependency>
       <groupId>com.ozonehis</groupId>
       <artifactId>ozone-scripts</artifactId>
       <type>zip</type>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>${ozone.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
