--- a/pom.xml
+++ b/pom.xml
@@ -220,13 +220,13 @@
   <profiles>
     <profile>
       <id>validator</id>
-      <!-- <activation>
+      <activation>
         <jdk>1.8</jdk>
         <property>
           <name>env.CI</name>
           <value>true</value>
         </property>
-      </activation> -->
+      </activation>
       <build>
         <plugins>
           <!-- copy over merged/packaged OpenMRS config for validation at the integration-test phase -->
@@ -240,7 +240,7 @@
                   <target>
                     <copy todir="${project.build.directory}/validator/configuration">
                       <fileset
-                        dir="${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config" />
+                        dir="${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config"/>
                     </copy>
                   </target>
                 </configuration>
