--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
     <ozone.version>1.0.0-SNAPSHOT</ozone.version>
+    <ozone-distro.name>oz-haiti</ozone-distro.name>
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
 
@@ -198,6 +199,32 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+
+      <plugin>
+      <artifactId>maven-antrun-plugin</artifactId>
+      <executions>
+        <!-- Copy Openmrs initializer config and add a new folder to mimic content package structure -->
+        <execution>
+          <id>copy-openmrs-initializer-config-with-new-dir</id>
+          <phase>process-resources</phase>
+          <configuration>
+            <target>
+              <mkdir dir="${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config"/>
+
+              <copy todir="${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config">
+                <fileset dir="configs/openmrs/initializer_config"/>
+                <mapper type="regexp"
+                        from="^([^/]+)/(.+)$"
+                        to="\1/${ozone-distro.name}/\2"/>
+              </copy>
+            </target>
+          </configuration>
+          <goals>
+            <goal>run</goal>
+          </goals>
+        </execution>
+      </executions>
       </plugin>
       <!-- Compile a dependency report -->
        <plugin>
