--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
             </goals>
             <configuration>
               <outputDirectory>
-                ${project.build.directory}/${project.artifactId}-${project.version}/distro/
+                ${project.build.directory}/scripts/openmrs/
               </outputDirectory>
               <overwrite>true</overwrite>
               <resources>
