--- a/pom.xml
+++ b/pom.xml
@@ -94,19 +94,19 @@
                 <resource>
                   <directory>${project.build.directory}/ozone</directory>
                   <excludes>
-                    <exclude>distro/configs/**/address*/*demo.*</exclude>
-                    <exclude>distro/configs/**/concepts/*demo.csv</exclude>
-                    <exclude>distro/configs/**/concepts/visittypes-core_data.csv</exclude>
+                    <exclude>distro/configs/**/address*/**/*demo.*</exclude>
+                    <exclude>distro/configs/**/concepts/**/*demo.csv</exclude>
+                    <exclude>distro/configs/**/concepts/**/visittypes-core_data.csv</exclude>
                     <exclude>distro/configs/**/program*</exclude>
-                    <exclude>distro/configs/**/ampathforms/*core_demo.json</exclude>
-                    <exclude>distro/configs/**/ampathforms/stuctured_soap_note.json</exclude>
+                    <exclude>distro/configs/**/ampathforms/**/*core_demo.json</exclude>
+                    <exclude>distro/configs/**/ampathforms/**/stuctured_soap_note.json</exclude>
                     <exclude>distro/configs/**/ampath_poc_adult_return_visit_form_v1.6_core-demo.json</exclude>
                     <exclude>distro/configs/**/ampathformstranslations/</exclude>
                     <exclude>distro/configs/**/appointment*/</exclude>
                     <exclude>distro/configs/**/attributetypes/</exclude>
-                    <exclude>distro/configs/**/globalproperties/*demo.xml</exclude>
-                    <exclude>distro/configs/**/drugs/drugs-core_demo.csv</exclude>
-                    <exclude>distro/configs/**/locations/locations-core_demo.csv</exclude>
+                    <exclude>distro/configs/**/globalproperties/**/*demo.xml</exclude>
+                    <exclude>distro/configs/**/drugs/**/drugs-core_demo.csv</exclude>
+                    <exclude>distro/configs/**/locations/**/locations-core_demo.csv</exclude>
                     <exclude>distro/configs/**/patientidentifiertypes/</exclude>
                     <exclude>distro/configs/**/personattributetypes/</exclude>
                     <exclude>distro/configs/**/visittypes*</exclude>
@@ -116,10 +116,10 @@
                     <exclude>distro/configs/**/Physical_examination.json</exclude>
                     <exclude>distro/configs/**/encountertypes_core-demo.csv</exclude>
                     <exclude>distro/configs/**/misc-core_data.csv/</exclude>
-                    <exclude>distro/configs/**/ocl/openmrs_BasicLabTests*</exclude>
-                    <exclude>distro/configs/**/ocl/openmrs_CIELImmunizationContent*</exclude>
-                    <exclude>distro/configs/**/ocl/openmrs_DeathCause*</exclude>
-                    <exclude>distro/configs/**/queues/*</exclude>
+                    <exclude>distro/configs/**/ocl/**/openmrs_BasicLabTests*</exclude>
+                    <exclude>distro/configs/**/ocl/**/openmrs_CIELImmunizationContent*</exclude>
+                    <exclude>distro/configs/**/ocl/**/openmrs_DeathCause*</exclude>
+                    <exclude>distro/configs/**/queues/**/*</exclude>
                     <exclude>distro/configs/**/relationshiptypes-core_demo.csv</exclude>
 
                     <!-- Exlude Ozone's Odoo Initializer configs -->
