HSC-494: Add display conditions privileges for ward app

--- a/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
@@ -68,6 +68,12 @@
     "disableChangingVisitLocation": true
   },
   "@openmrs/esm-ward-app": {
+    "Display conditions": {
+      "privileges": [
+        "Get Admission Locations",
+        "Get Beds"
+      ]
+    },
     "extensionSlots": {
       "action-menu-ward-patient-items-slot": {
         "add": [
