--- a/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
@@ -15,6 +15,29 @@
       }
     ]
   },
+  "@openmrs/esm-patient-vitals-app": {
+    "concepts": {
+      "systolicBloodPressureUuid": "bc4f2e44-26b0-4f5f-a98f-248601fdf792",
+      "diastolicBloodPressureUuid": "8bc4016d-88ee-43dc-a943-ad10b8bb211e",
+      "pulseUuid": "0b9e358e-c9cf-439e-8c00-69f873cec59f",
+      "temperatureUuid": "0ff962b3-8730-4eb0-9028-82d403b066bf",
+      "oxygenSaturationUuid": "c642aeb3-95d3-4d1b-aa5b-1273b438d14f",
+      "heightUuid": "5090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+      "weightUuid": "5089AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+      "respiratoryRateUuid": "8130729f-4605-49b3-b7c0-12b19cc10543",
+      "midUpperArmCircumferenceUuid": "f074942b-666b-4ca3-9f0e-1103128b3ae2",
+      "vitalSignsConceptSetUuid": "773d36e9-119e-452c-91ee-4ac90245e504"
+    },
+    "vitals": {
+      "useFormEngine": true,
+      "formName": "Vitals and Biometrics",
+      "formUuid": "895f7868-ca3f-33bb-9336-20f1daf461b3",
+      "encounterTypeUuid": "a7feb1a0-4bd8-48d1-acfd-ce282d139f06"
+    },
+    "biometrics": {
+      "bmiUnit": "kg / m²"
+    }
+  },
   "@openmrs/esm-patient-chart-app": {
     "Display conditions": {
       "privileges": [
