--- a/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
@@ -16,6 +16,7 @@
     ]
   },
   "@openmrs/esm-patient-chart-app": {
+    "restrictByVisitLocationTag": true,
     "Display conditions": {
       "privileges": [
         "View Patient Summary"
