--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,7 @@
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
 
     <!-- Override or add modules dependencies -->
-    <openmrsERPVersion>2.1.0</openmrsERPVersion>
-    <orderExpansionVersion>1.0.0</orderExpansionVersion>
-    <emrapi.version>2.1.0</emrapi.version>
-    <event.version>2.10.0</event.version>
-    <bedmanagement.version>6.0.0</bedmanagement.version>
+<!--    <openmrsERPVersion>2.1.0</openmrsERPVersion>-->
 
     <!-- Odoo Addons -->
     <odooWarehouseVersion>1.0.0</odooWarehouseVersion>
@@ -49,34 +45,11 @@
       <type>zip</type>
       <version>${ozone.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>erp-omod</artifactId>
-      <version>${openmrsERPVersion}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>orderexpansion-omod</artifactId>
-        <version>${orderExpansionVersion}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>emrapi-omod</artifactId>
-      <version>${emrapi.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs</groupId>
-      <artifactId>event-omod</artifactId>
-      <version>${event.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>bedmanagement-omod</artifactId>
-      <version>${bedmanagement.version}</version>
-      <scope>provided</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.openmrs.module</groupId>-->
+<!--      <artifactId>erp-omod</artifactId>-->
+<!--      <version>${openmrsERPVersion}</version>-->
+<!--    </dependency>-->
 
     <!-- Odoo Addon -->
     <dependency>
