--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.ozonehis</groupId>
     <artifactId>maven-parent</artifactId>
-    <version>1.0.0-alpha.13</version>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>com.ozonehis</groupId>
@@ -17,16 +17,12 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
-    <ozone.version>1.0.0-alpha.13</ozone.version>
+    <ozone.version>1.0.0-SNAPSHOT</ozone.version>
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
 
     <!-- Override or add modules dependencies -->
     <openmrsERPVersion>2.1.0</openmrsERPVersion>
-    <orderExpansionVersion>1.0.0</orderExpansionVersion>
-    <emrapi.version>2.1.0</emrapi.version>
-    <event.version>2.10.0</event.version>
-    <bedmanagement.version>6.0.0</bedmanagement.version>
 
     <!-- Odoo Addons -->
     <odooWarehouseVersion>1.0.0</odooWarehouseVersion>
@@ -53,29 +49,6 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>erp-omod</artifactId>
       <version>${openmrsERPVersion}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>orderexpansion-omod</artifactId>
-        <version>${orderExpansionVersion}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>emrapi-omod</artifactId>
-      <version>${emrapi.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs</groupId>
-      <artifactId>event-omod</artifactId>
-      <version>${event.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>bedmanagement-omod</artifactId>
-      <version>${bedmanagement.version}</version>
-      <scope>provided</scope>
     </dependency>
 
     <!-- Odoo Addon -->
@@ -133,19 +106,19 @@
                 <resource>
                   <directory>${project.build.directory}/ozone</directory>
                   <excludes>
-                    <exclude>distro/configs/**/address*/*demo.*</exclude>
-                    <exclude>distro/configs/**/concepts/*demo.csv</exclude>
-                    <exclude>distro/configs/**/concepts/visittypes-core_data.csv</exclude>
+                    <exclude>distro/configs/**/address*/**/*demo.*</exclude>
+                    <exclude>distro/configs/**/concepts/**/*demo.csv</exclude>
+                    <exclude>distro/configs/**/concepts/**/visittypes-core_data.csv</exclude>
                     <exclude>distro/configs/**/program*</exclude>
-                    <exclude>distro/configs/**/ampathforms/*core_demo.json</exclude>
-                    <exclude>distro/configs/**/ampathforms/stuctured_soap_note.json</exclude>
+                    <exclude>distro/configs/**/ampathforms/**/*core_demo.json</exclude>
+                    <exclude>distro/configs/**/ampathforms/**/stuctured_soap_note.json</exclude>
                     <exclude>distro/configs/**/ampath_poc_adult_return_visit_form_v1.6_core-demo.json</exclude>
                     <exclude>distro/configs/**/ampathformstranslations/</exclude>
                     <exclude>distro/configs/**/appointment*/</exclude>
                     <exclude>distro/configs/**/attributetypes/</exclude>
-                    <exclude>distro/configs/**/globalproperties/*demo.xml</exclude>
-                    <exclude>distro/configs/**/drugs/drugs-core_demo.csv</exclude>
-                    <exclude>distro/configs/**/locations/locations-core_demo.csv</exclude>
+                    <exclude>distro/configs/**/globalproperties/**/*demo.xml</exclude>
+                    <exclude>distro/configs/**/drugs/**/drugs-core_demo.csv</exclude>
+                    <exclude>distro/configs/**/locations/**/locations-core_demo.csv</exclude>
                     <exclude>distro/configs/**/patientidentifiertypes/</exclude>
                     <exclude>distro/configs/**/personattributetypes/</exclude>
                     <exclude>distro/configs/**/visittypes*</exclude>
@@ -155,12 +128,22 @@
                     <exclude>distro/configs/**/Physical_examination.json</exclude>
                     <exclude>distro/configs/**/encountertypes_core-demo.csv</exclude>
                     <exclude>distro/configs/**/misc-core_data.csv/</exclude>
-                    <exclude>distro/configs/**/ocl/openmrs_BasicLabTests*</exclude>
-                    <exclude>distro/configs/**/ocl/openmrs_CIELImmunizationContent*</exclude>
-                    <exclude>distro/configs/**/ocl/openmrs_DeathCause*</exclude>
-                    <exclude>distro/configs/**/queues/*</exclude>
+                    <exclude>distro/configs/**/ocl/**/openmrs_BasicLabTests*</exclude>
+                    <exclude>distro/configs/**/ocl/**/openmrs_CIELImmunizationContent*</exclude>
+                    <exclude>distro/configs/**/ocl/**/openmrs_DeathCause*</exclude>
+                    <exclude>distro/configs/**/queues/**/*</exclude>
                     <exclude>distro/configs/**/relationshiptypes-core_demo.csv</exclude>
-                    <exclude>distro/configs/openmrs/initializer_config/ocl/openmrs_SOAP_vSOAP_Note_autoexpand-SOAP*</exclude>
+
+                    <exclude>distro/configs/**/addresshierarchy/01_referenceapplication-demo/*</exclude>
+                    <exclude>distro/configs/**/ampathforms/01_referenceapplication-demo/*</exclude>
+                    <exclude>distro/configs/**/conceptreferencerange/01_referenceapplication-demo/*</exclude>
+                    <exclude>distro/configs/**/dispositions/01_referenceapplication-demo/*</exclude>
+                    <exclude>distro/configs/**/globalproperties/01_referenceapplication-demo/*</exclude>
+                    <exclude>distro/configs/**/globalproperties/02_ozone-distro/disable-demo-patients.xml</exclude>
+                    <exclude>distro/configs/**/globalproperties/02_ozone-distro/fhir2-paging-props.xml</exclude>
+                    <exclude>distro/configs/**/metadatatermmappings/01_referenceapplication-demo/*</exclude>
+                    <exclude>distro/configs/**/ocl/01_referenceapplication-demo/openmrs_Billing_202410302350_autoexpand*</exclude>
+                    <exclude>distro/configs/**/ocl/**/openmrs_SOAP_vSOAP_Note_autoexpand-SOAP*</exclude>
 
                     <!-- Exlude Ozone's Odoo Initializer configs -->
                     <exclude>distro/configs/odoo/initializer_config/**</exclude>
@@ -187,6 +170,29 @@
                     <include>distro/configs/odoo/initializer_config/auth_providers/**</include>
                     <include>distro/configs/odoo/initializer_config/initializer_config.json</include>
                   </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+          <execution>
+            <!-- Copy over the content-packages.txt file -->
+            <id>Copy content-packages.txt</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>
+                ${project.build.directory}/scripts/openmrs/
+              </outputDirectory>
+              <overwrite>true</overwrite>
+              <resources>
+                <resource>
+                  <directory>${project.basedir}/scripts</directory>
+                  <includes>
+                    <include>content-packages.txt</include>
+                  </includes>
+                  <filtering>false</filtering>
                 </resource>
               </resources>
             </configuration>
