--- a/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-haiti-frontend-config.json
@@ -334,5 +334,10 @@
         ]
       }
     }
+  },
+  "@openmrs/esm-home-app": {
+    "defaultDashboardPerRole": {
+      "System Developer": "patient-lists"
+    }
   }
 }
