--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,8 @@
                     <exclude>distro/configs/**/ocl/01_referenceapplication-demo/openmrs_Billing_202410302350_autoexpand*</exclude>
                     <exclude>distro/configs/**/ocl/**/openmrs_SOAP_vSOAP_Note_autoexpand-SOAP*</exclude>
 
+                    <exclude>distro/binaries/openmrs/modules/queues*</exclude>
+
                     <!-- Exlude Ozone's Odoo Initializer configs -->
                     <exclude>distro/configs/odoo/initializer_config/**</exclude>
                   </excludes>
