--- a/configs/openmrs/initializer_config/ampathforms/vitals_and_biometrics.json
+++ b/configs/openmrs/initializer_config/ampathforms/vitals_and_biometrics.json
@@ -290,6 +290,26 @@
                   }
                 ]
               }
+            },
+            {
+              "label": "Blood glucose",
+              "type": "obs",
+              "required": false,
+              "id": "bloodGlucose",
+              "questionOptions": {
+                "rendering": "number",
+                "concept": "887AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+                "min": "0",
+                "disallowDecimals": false,
+                "conceptMappings": [
+                  {
+                    "relationship": "SAME-AS",
+                    "type": "CIEL",
+                    "value": "887"
+                  }
+                ]
+              },
+              "validators": []
             }
           ]
         }
