HSC-539: Add blood sugar level in vitals and biometrics form

--- a/configs/openmrs/initializer_config/ampathforms/vitals_and_biometrics.json
+++ b/configs/openmrs/initializer_config/ampathforms/vitals_and_biometrics.json
@@ -103,6 +103,18 @@
                   }
                 ]
               }
+            },
+            {
+              "label": "Blood Sugar Level (mg/dl)",
+              "id": "bloodSugarLevel",
+              "type": "obs",
+              "questionOptions": {
+                "rendering": "number",
+                "concept": "f52d731e-58da-4f3a-a480-77c5e9d8d2eb",
+                "min": "0",
+                "step": 1
+              },
+              "validators": []
             }
           ]
         },
