--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,18 @@
   <parent>
     <groupId>com.ozonehis</groupId>
     <artifactId>maven-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-alpha.15</version>
   </parent>
 
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-haiti</artifactId>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.2.0</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
-    <ozone.version>1.0.0-SNAPSHOT</ozone.version>
+    <ozone.version>1.0.0-alpha.15</ozone.version>
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
 
