--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
 
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-haiti</artifactId>
-  <version>1.2.0</version>
+  <version>1.3.0-SNAPSHOT</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
-    <ozone.version>1.0.0-alpha.15</ozone.version>
+    <ozone.version>1.0.0-SNAPSHOT</ozone.version>
     <!-- Classifier for the dependency report artifact -->
     <dependencyReportClassifier>dependencies</dependencyReportClassifier>
 
